Card Section Height Adjusted and Dark Mode Icon fixed Done

--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -1,3 +1,7 @@
+.card-section {
+  min-height: calc(100vh - 271px);
+}
+
 .card-section h5 {
   font-weight: 600;
   font-family: sans-serif;
